--- a/package.json
+++ b/package.json
@@ -1,66 +1,66 @@
 {
-  "name": "kotha-app",
-  "version": "1.0.0",
-  "main": "server.js",
-  "license": "MIT",
-  "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "build": "tsc",
-    "prod": "node build/server.js",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "lint": "npx eslint .",
-    "lint:fix": "npx eslint --fix .",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@jest/globals": "^28.1.2",
-    "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.12",
-    "config": "^3.3.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "eslint-plugin-import": "^2.26.0",
-    "express": "^4.18.1",
-    "joi": "^17.6.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^6.5.4",
-    "node-cache": "^5.1.2",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
-    "puppeteer": "^15.5.0",
-    "sequelize": "6.6.4",
-    "winston": "^3.7.2"
-  },
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/body-parser": "^1.19.2",
-    "@types/cheerio": "^0.22.31",
-    "@types/config": "^0.0.41",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.3",
-    "@types/lodash": "^4.14.182",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^18.0.0",
-    "@types/node-cache": "^4.2.5",
-    "@types/puppeteer": "^5.4.6",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "eslint": "^8.18.0",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-jest": "^26.5.3",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "jest": "^28.1.1",
-    "prettier": "^2.7.1",
-    "supertest": "^6.2.4",
-    "ts-jest": "^28.0.5",
-    "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.0.0",
-    "typescript": "^4.7.4"
-  }
+	"name": "nodejs_fin_market",
+	"version": "1.0.0",
+	"main": "server.js",
+	"license": "MIT",
+	"scripts": {
+		"dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+		"build": "tsc",
+		"prod": "node build/server.js",
+		"prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
+		"lint": "npx eslint .",
+		"lint:fix": "npx eslint --fix .",
+		"test": "jest"
+	},
+	"dependencies": {
+		"@jest/globals": "^28.1.2",
+		"axios": "^0.27.2",
+		"cheerio": "^1.0.0-rc.12",
+		"config": "^3.3.7",
+		"cors": "^2.8.5",
+		"dotenv": "^16.0.1",
+		"eslint-plugin-import": "^2.26.0",
+		"express": "^4.18.1",
+		"joi": "^17.6.0",
+		"lodash": "^4.17.21",
+		"mongoose": "^6.5.4",
+		"node-cache": "^5.1.2",
+		"pg": "^8.7.3",
+		"pg-hstore": "^2.3.4",
+		"puppeteer": "^15.5.0",
+		"sequelize": "6.6.4",
+		"winston": "^3.7.2"
+	},
+	"devDependencies": {
+		"@types/axios": "^0.14.0",
+		"@types/body-parser": "^1.19.2",
+		"@types/cheerio": "^0.22.31",
+		"@types/config": "^0.0.41",
+		"@types/cors": "^2.8.12",
+		"@types/express": "^4.17.13",
+		"@types/jest": "^28.1.3",
+		"@types/lodash": "^4.14.182",
+		"@types/mongoose": "^5.11.97",
+		"@types/node": "^18.0.0",
+		"@types/node-cache": "^4.2.5",
+		"@types/puppeteer": "^5.4.6",
+		"@types/supertest": "^2.0.12",
+		"@typescript-eslint/eslint-plugin": "^5.29.0",
+		"@typescript-eslint/parser": "^5.29.0",
+		"eslint": "^8.18.0",
+		"eslint-config-airbnb-typescript": "^17.0.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-import-resolver-typescript": "^2.7.1",
+		"eslint-plugin-eslint-comments": "^3.2.0",
+		"eslint-plugin-jest": "^26.5.3",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-promise": "^6.0.0",
+		"jest": "^28.1.1",
+		"prettier": "^2.7.1",
+		"supertest": "^6.2.4",
+		"ts-jest": "^28.0.5",
+		"ts-node-dev": "^2.0.0",
+		"tsconfig-paths": "^4.0.0",
+		"typescript": "^4.7.4"
+	}
 }
